kubernetes/apps/llm/comfyui-ext/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui-ext-service
  namespace: llm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8188
      targetPort: 8188
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: comfyui-ext-endpointslice
  namespace: llm
  labels:
    kubernetes.io/service-name: comfyui-ext-service
addressType: IPv4
ports:
  - name: http
    port: 8188
    protocol: TCP
endpoints:
  - addresses:
      - 10.1.1.6
