kubernetes/apps/llm/comfyui-ext/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui-ext
  namespace: llm
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - comfyui.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: comfyui-ext-service
          port: 8188
